style(week-0): fix layout issues in Zerodha landing page

--- a/0-1/assignments/week-0/css/styles.css
+++ b/0-1/assignments/week-0/css/styles.css
@@ -40,12 +40,13 @@ h1,
 h2,
 h3 {
 	color: var(--color-body);
-	font-weight: 400;
+	font-weight: 500;
+	line-height: 1.3;
 	margin-bottom: 1rem;
 }
 
 h1 {
-	font-size: 4rem;
+	font-size: 4.5rem;
 }
 
 h2 {
@@ -54,7 +55,6 @@ h2 {
 
 h3 {
 	font-size: 2.4rem;
-	font-weight: 500;
 	line-height: 1.3;
 }
 
@@ -62,6 +62,12 @@ h3 {
 	/* For Laptops and Desktops */
 	body {
 		font-size: 1.8rem;
+	}
+
+	h1,
+	h2,
+	h3 {
+		font-weight: 400;
 	}
 
 	h1 {
@@ -85,7 +91,7 @@ a {
 
 .link-arrow {
 	color: var(--color-primary);
-	font-size: 2rem;
+	font-size: 1.7rem;
 	font-weight: 500;
 	transition: margin 0.2s ease-in-out;
 }
@@ -664,7 +670,7 @@ a {
 
 /* ---- Footer ---- */
 
-footer {
+.footer {
 	background-color: #fafafb;
 	border-top: 1px solid #eee;
 	color: var(--color-body-lighter);
@@ -756,7 +762,7 @@ footer {
 	}
 
 	.footer__brand {
-		align-self: start;
+		justify-self: start;
 	}
 
 	.socials {
